--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   }
 
   body {
-    @apply bg-slate-600 overflow-x-hidden;
+    @apply overflow-x-hidden;
   }
 }
 
@@ -27,5 +27,21 @@
 
   .focus-shadow-white {
     @apply focus:outline-none focus:shadow-[0_0_0_4px_rgba(255,255,255,.28)];
+  }
+
+  .ratio {
+    @apply relative z-[1] w-full overflow-hidden before:block before:content-[""] [&>*]:absolute [&>*]:top-0 [&>*]:left-0 [&>*]:w-full
+  }
+  .ratio-3x2 {
+    @apply before:pt-[66.6666666667%];
+  }
+
+  /* START - HomePage */
+  .main-banner .slick-list,
+  .main-banner .slick-track {
+    @apply h-full;
+  }
+  .main-banner .slick-slide {
+    @apply relative z-[1];
   }
 }
