[調整]_1.處理使用 column 實現瀑布流排版在 IOS 會跑版的問題 2.手機打開 navabr 選單切換頁面要收起選單

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,20 @@
     @apply underline hover:text-[--theme-black] transition-colors duration-300;
   }
 
+
+  .my-masonry-grid {
+    @apply flex -ml-3 w-auto;
+  }
+
+  .my-masonry-grid_column {
+    @apply pl-3 bg-clip-padding
+  }
+
+  /* Style your items */
+  .my-masonry-grid_column > * {
+    @apply mb-3
+  }
+
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     @apply hidden;
