--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@
     @apply w-3 h-2;
   }
   .has-scrollbar::-webkit-scrollbar {
-    @apply hidden md:block md:w-3 md:h-2;
+    @apply hidden lg:block lg:w-3 lg:h-2;
   }
 
   /* Track */
@@ -83,7 +83,7 @@
     @apply bg-[--theme-gray-200];
   }
   .has-scrollbar::-webkit-scrollbar-track {
-    @apply md:bg-[--theme-gray-200];
+    @apply lg:bg-[--theme-gray-200];
   }
 
   /* Handle */
@@ -91,7 +91,7 @@
     @apply bg-[--theme-black];
   }
   .has-scrollbar::-webkit-scrollbar-thumb {
-    @apply md:bg-[--theme-gray-300];
+    @apply lg:bg-[--theme-gray-300];
   }
 
   /* Hide scrollbar for Chrome, Safari and Opera */
