[調整]_查無此頁樣式

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,11 @@
     @apply focus:outline-none;
   }
 
+  html {
+    @apply h-full;
+  }
   body {
-    @apply overflow-x-hidden bg-[--theme-gray-50];
+    @apply overflow-x-hidden bg-[--theme-gray-50] h-full;
   }
 
   a, 
